--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </image>
             <h1>I am <br><span id="name">Tim Berners Lee</span></h1>
             <h2>I am the founder of www:world wide web</h2>
+            <h2>By-Shashwat sharma 6A</h2>
         </div>
     </section>
     <section id="bio">
@@ -71,7 +72,7 @@
                 <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>sharshashwat.sharma1147@gamil.com</h3>
             </a><br><br>
             <a href="#">
-                <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>My instagram id</h3>
+                <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>cool_killer999</h3>
             </a>
         </div>
     </section>
